Fix button height in tables on iOS  (#101)
Fix button height in tables on iOS

--- a/src/components/table.css
+++ b/src/components/table.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 .table_sort_icon {
   margin-left: 5px;
